# kMcache

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  build_backend.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: compatibility.md  integration_guide.md  integration_guide.zh-CN.md  migration_guide.md  release_checklist.md  release_standards.md  任务规划.md  使用文档.md  开发约束.md  技术方案以及架构.md
examples/: fastapi_minimal.py  fastapi_patterns.py
kmcache/: __init__.py  config.py  constants.py  exceptions.py  manager.py  models.py
kmcache/backends/: __init__.py  base.py  local.py  redis.py
kmcache/compression/: __init__.py  base.py  gzip.py
kmcache/coordination/: __init__.py  locks.py  pubsub.py  singleflight.py
kmcache/features/: __init__.py  avalanche.py  breakdown.py  broadcast.py  circuit_breaker.py  refresh.py  warmup.py
kmcache/integrations/: __init__.py  decorators.py  fastapi.py  keys.py
kmcache/observability/: __init__.py  events.py  logging.py  metrics.py  tracing.py
kmcache/serialization/: __init__.py  base.py  json.py  (+2 more)
scripts/: benchmark.py  check.ps1  check.py
tests/: __init__.py  test_avalanche.py  test_benchmark_workflow.py  test_config.py  test_fastapi_integration.py  test_local_backend.py  test_manager.py  test_observability.py  test_package_exports.py  test_packaging_metadata.py  test_quality_workflow.py  test_redis_backend.py  test_serialization.py
(+3 files in other folders)
