[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "kmcache"
version = "0.3.0"
description = "Async cache toolkit for FastAPI with pluggable L1/L2 backends."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
keywords = ["cache", "fastapi", "redis", "asyncio", "l1", "l2"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: FastAPI",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/example/kmcache"
Documentation = "https://github.com/example/kmcache#readme"
Repository = "https://github.com/example/kmcache"

[project.optional-dependencies]
redis = ["redis==7.4.0"]
fastapi = ["fastapi==0.136.1", "httpx==0.28.1"]
msgpack = ["msgpack==1.1.2"]
all = ["fastapi==0.136.1", "httpx==0.28.1", "redis==7.4.0", "msgpack==1.1.2"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["kmcache*"]
